--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "serverapi",
   "version": "1.0.0",
   "description": "simulates student information",
-  "main": "core/server.js",
+  "main": "./app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node core/server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
